--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -275,6 +275,38 @@
      <string>XTC PDF Generated</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="open_graph_button">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>140</x>
+      <y>470</y>
+      <width>161</width>
+      <height>24</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Open Graph</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="open_xtc_button">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>490</x>
+      <y>470</y>
+      <width>121</width>
+      <height>24</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Open XTC Graph</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
