--- a/experimentswindow.ui
+++ b/experimentswindow.ui
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Dialog</class>
- <widget class="QDialog" name="Dialog">
+ <class>ExperimentsWindow</class>
+ <widget class="QDialog" name="ExperimentsWindow">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1273</width>
-    <height>890</height>
+    <width>1142</width>
+    <height>820</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -15,11 +15,7 @@
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
-    <widget class="QTextEdit" name="out_text">
-     <property name="readOnly">
-      <bool>true</bool>
-     </property>
-    </widget>
+    <widget class="QTextEdit" name="experiments_Output"/>
    </item>
   </layout>
  </widget>
