--- a/pathwindow.ui
+++ b/pathwindow.ui
@@ -6,58 +6,111 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>599</width>
-    <height>262</height>
+    <width>600</width>
+    <height>280</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Path Finder</string>
   </property>
   <layout class="QGridLayout" name="gridLayout_2">
-   <item row="0" column="0">
+   <item row="2" column="1">
+    <widget class="QTextEdit" name="output_text">
+     <property name="readOnly">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="1">
     <layout class="QGridLayout" name="gridLayout">
-     <item row="3" column="2">
+     <item row="4" column="0" alignment="Qt::AlignHCenter">
+      <widget class="QRadioButton" name="complete_radio">
+       <property name="text">
+        <string>Complete Graph</string>
+       </property>
+       <attribute name="buttonGroup">
+        <string notr="true">buttonGroup</string>
+       </attribute>
+      </widget>
+     </item>
+     <item row="4" column="1" alignment="Qt::AlignHCenter">
+      <widget class="QRadioButton" name="only_radio">
+       <property name="text">
+        <string>Only Path</string>
+       </property>
+       <property name="checked">
+        <bool>true</bool>
+       </property>
+       <attribute name="buttonGroup">
+        <string notr="true">buttonGroup</string>
+       </attribute>
+      </widget>
+     </item>
+     <item row="3" column="0" colspan="2" alignment="Qt::AlignHCenter">
+      <widget class="QCheckBox" name="path_check">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
+       <property name="text">
+        <string>Graph Generated</string>
+       </property>
+      </widget>
+     </item>
+     <item row="5" column="3">
       <widget class="QPushButton" name="show_button">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
        <property name="text">
         <string>Show Path on Graph</string>
        </property>
       </widget>
      </item>
-     <item row="0" column="0">
-      <widget class="QLabel" name="label">
+     <item row="5" column="0" colspan="2">
+      <widget class="QPushButton" name="generate_path_graph_button">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
        <property name="text">
-        <string>Source:</string>
+        <string>Generate Path Graph</string>
        </property>
       </widget>
      </item>
-     <item row="0" column="1" colspan="2">
-      <widget class="QLineEdit" name="source_name"/>
-     </item>
-     <item row="3" column="1">
+     <item row="5" column="2">
       <widget class="QPushButton" name="FindPath_button">
        <property name="text">
         <string>Find Path</string>
        </property>
       </widget>
      </item>
-     <item row="1" column="1" colspan="2">
-      <widget class="QLineEdit" name="destination_name"/>
+     <item row="1" column="0" alignment="Qt::AlignHCenter">
+      <widget class="QLabel" name="label">
+       <property name="text">
+        <string>Source:</string>
+       </property>
+      </widget>
      </item>
-     <item row="1" column="0">
+     <item row="2" column="0" alignment="Qt::AlignHCenter">
       <widget class="QLabel" name="label_2">
        <property name="text">
         <string>Destination:</string>
        </property>
       </widget>
      </item>
-     <item row="2" column="1">
+     <item row="2" column="1" colspan="3">
+      <widget class="QLineEdit" name="destination_name"/>
+     </item>
+     <item row="1" column="1" colspan="3">
+      <widget class="QLineEdit" name="source_name"/>
+     </item>
+     <item row="4" column="2">
       <widget class="QRadioButton" name="without_button">
        <property name="text">
         <string>Without Topology Control</string>
        </property>
       </widget>
      </item>
-     <item row="2" column="2">
+     <item row="4" column="3">
       <widget class="QRadioButton" name="with_button">
        <property name="text">
         <string>With Topology Control</string>
@@ -69,10 +122,10 @@
      </item>
     </layout>
    </item>
-   <item row="1" column="0">
-    <widget class="QTextEdit" name="output_text">
-     <property name="readOnly">
-      <bool>true</bool>
+   <item row="1" column="1" alignment="Qt::AlignHCenter">
+    <widget class="QLabel" name="errorLabel">
+     <property name="text">
+      <string>Out of Range!</string>
      </property>
     </widget>
    </item>
@@ -80,4 +133,7 @@
  </widget>
  <resources/>
  <connections/>
+ <buttongroups>
+  <buttongroup name="buttonGroup"/>
+ </buttongroups>
 </ui>
