--- a/pathwindow.ui
+++ b/pathwindow.ui
@@ -14,10 +14,17 @@
    <string>Path Finder</string>
   </property>
   <layout class="QGridLayout" name="gridLayout_2">
-   <item row="2" column="1">
-    <widget class="QTextEdit" name="output_text">
-     <property name="readOnly">
-      <bool>true</bool>
+   <item row="3" column="1">
+    <widget class="QLabel" name="label_3">
+     <property name="text">
+      <string>Distance:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="1" alignment="Qt::AlignHCenter">
+    <widget class="QLabel" name="errorLabel">
+     <property name="text">
+      <string>Out of Range!</string>
      </property>
     </widget>
    </item>
@@ -122,10 +129,24 @@
      </item>
     </layout>
    </item>
-   <item row="1" column="1" alignment="Qt::AlignHCenter">
-    <widget class="QLabel" name="errorLabel">
+   <item row="9" column="1">
+    <widget class="QTextEdit" name="output_text">
+     <property name="readOnly">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="1">
+    <widget class="QLineEdit" name="distanceOuput">
+     <property name="readOnly">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="5" column="1">
+    <widget class="QLabel" name="label_4">
      <property name="text">
-      <string>Out of Range!</string>
+      <string>Path:</string>
      </property>
     </widget>
    </item>
